Add basic reusable gitlab CI pipeline
This basic pipeline can be used to build packages and create a
repository from them.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: tuxpkg
 Maintainer: Antonio Terceiro <antonio.terceiro@linaro.org>
 Section: python
 Priority: optional
-Build-Depends: debhelper-compat (= 13),
+Build-Depends: bash-completion,
+               debhelper-compat (= 13),
                dh-python,
                flit,
                git,
