Add release scripts

--- a/gitlab-ci-build-packages.yml
+++ b/gitlab-ci-build-packages.yml
@@ -48,3 +48,10 @@ variables:
     paths:
       - dist/repo
 
+.pypi:
+  image: debian
+  stage: publish
+  script:
+    - apt-get update
+    - apt-get istall --no-install-recommends git flit
+    - flit publish
