gitlab-ci-pipeline.yml: comment "deb" target for now

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -1,9 +1,9 @@
 dist:
   extends: .dist
 
-deb:
-  extends: .deb
-  needs: [dist]
+#deb:
+  #extends: .deb
+  #needs: [dist]
 
 rpm:
   extends: .rpm
