gitlab-ci-pipeline.yml: fix call to apt-get install

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -53,5 +53,5 @@ pypi:
     FLIT_USERNAME: __token__
   script:
     - apt-get update
-    - apt-get istall --no-install-recommends git flit
+    - apt-get install --no-install-recommends git flit
     - flit publish
