gitlab-ci-pipeline.yml: rebuild ci image on releases

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -21,6 +21,7 @@ ci-image-debian:
     changes:
     - Dockerfile.ci-debian
     - debian/control
+    - debian/changelog
 
 ci-image-fedora:
   stage: .pre
