gitlab-ci-pipeline.yml: fix image names

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -1,7 +1,7 @@
 variables:
   TUXPKG: tuxpkg
 
-image: $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/ci-debian
+image: $CI_REGISTRY_IMAGE:ci-debian
 
 ci-image-debian:
   stage: .pre
@@ -11,9 +11,9 @@ ci-image-debian:
   variables:
     DOCKER_DRIVER: overlay2
   script:
-  - 'docker build --build-arg=EXTRA_PACKAGES="dpkg-dev apt-utils createrepo-c rpm gpg gpg-agent python3" -t $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/ci-debian -f Dockerfile.ci-debian .'
+  - 'docker build --build-arg=EXTRA_PACKAGES="dpkg-dev apt-utils createrepo-c rpm gpg gpg-agent python3" -t $CI_REGISTRY_IMAGE:ci-debian -f Dockerfile.ci-debian .'
   - 'docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY'
-  - 'docker push $CI_REGISTRY/$CI_PROJECT_PATH_SLUGci-debian'
+  - 'docker push $CI_REGISTRY_IMAGE:ci-debian'
   only:
     refs:
     - master
@@ -31,9 +31,9 @@ ci-image-fedora:
   variables:
     DOCKER_DRIVER: overlay2
   script:
-  - 'docker build -t $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/ci-fedora -f Dockerfile.ci-fedora .'
+  - 'docker build -t $CI_REGISTRY_IMAGE:ci-fedora -f Dockerfile.ci-fedora .'
   - 'docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY'
-  - 'docker push $CI_REGISTRY/$CI_PROJECT_PATH_SLUGci-fedora'
+  - 'docker push $CI_REGISTRY_IMAGE:ci-fedora'
   only:
     refs:
     - master
@@ -44,7 +44,7 @@ ci-image-fedora:
 
 rpm:
   stage: build
-  image: $CI_REGISTRY/$CI_PROJECT_PATH_SLUG/ci-fedora
+  image: $CI_REGISTRY_IMAGE:ci-fedora
   variables:
     FLIT_NO_NETWORK: 1
   script:
