add tuxpkg init command to create skeleton files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ author = "Antonio Terceiro"
 author-email = "antonio.terceiro@linaro.org"
 home-page = "https://gitlab.com/Linaro/tuxpkg"
 classifiers = ["License :: OSI Approved :: MIT License"]
+requires = [
+    "jinja2",
+]
 
 [tool.flit.scripts]
 tuxpkg = "tuxpkg.__main__:main"
