deb, rpm: add missing build dependency on python3-jinja2

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: bash-completion,
                flit,
                git,
                python3-all,
+               python3-jinja2,
                python3-pytest,
                python3-pytest-cov,
                python3-pytest-mock
