--- a/Dockerfile.ci-fedora
+++ b/Dockerfile.ci-fedora
@@ -1,8 +1,1 @@
-FROM fedora
-ARG EXTRA_PACKAGES
-
-COPY *.spec /tuxpkg/
-RUN dnf install -y dnf-plugins-core rpm-build ${EXTRA_PACKAGES} \
-    && dnf builddep -y /tuxpkg/*.spec
-
-# vim: ft=dockerfile
+tuxpkg/data/init/Dockerfile.ci-fedora
