gitlab-ci-pipeline.yml: always install build dependencies
This fixes running the pipeline in merge requests that are adding new
build dependencies. For other merge requests, all build dependencies
will already be installed, so those calls will be no-ops.

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -5,6 +5,8 @@ variables:
 test:
   stage: test
   script:
+    - apt-get update -q
+    - apt-get build-dep -qy .
     - make test
 
 image: $CI_REGISTRY_IMAGE:ci-debian
@@ -54,6 +56,7 @@ rpm:
   variables:
     FLIT_NO_NETWORK: 1
   script:
+    - 'dnf builddep -y *.spec'
     - make rpm
     - rpm --query --info dist/*.rpm
     - rpm --query --requires dist/*.rpm
@@ -76,6 +79,8 @@ deb:
   variables:
     FLIT_NO_NETWORK: 1
   script:
+    - apt-get update -q
+    - apt-get build-dep -qy .
     - make deb
     - dpkg --info dist/*.deb
     - dpkg --contents dist/*.deb
