--- a/tuxpkg/data/init/Dockerfile.ci-fedora
+++ b/tuxpkg/data/init/Dockerfile.ci-fedora
@@ -3,7 +3,7 @@ ARG EXTRA_PACKAGES
 
 COPY Makefile *.spec /tuxpkg/
 RUN dnf install -y make dnf-plugins-core rpm-build ${EXTRA_PACKAGES} \
-    && make -C /tuxpkg rpm-sanity-test-prepare \
+    && make -C /tuxpkg rpm-sanity-check-prepare \
     && dnf builddep -y /tuxpkg/*.spec
 
 RUN if [ -f /tuxpkg/tuxpkg.spec ]; then exit; fi; \
