.gitlab-ci.yml: doc: use mkdocs-material from Debian
This fixes an error when trying to install mkdocs-material from pip
without --break-system-packages on Debian 12. On the other hand,
mkdocs-material is now available directly from the Debian repository.

--- a/tuxpkg/data/init/Dockerfile.ci-debian
+++ b/tuxpkg/data/init/Dockerfile.ci-debian
@@ -15,6 +15,7 @@ RUN apt-get update \
         git \
         make \
         mkdocs \
+        mkdocs-material \
         mypy \
         ${EXTRA_PACKAGES} \
     && true
