Delete any tmp directory after installation
Signed-off-by: Vishal Bhoj <vishal.bhoj@linaro.org>

--- a/tuxpkg/data/init/Dockerfile.ci-debian
+++ b/tuxpkg/data/init/Dockerfile.ci-debian
@@ -26,5 +26,6 @@ RUN if grep '^Source: tuxpkg' /tuxpkg/debian/control; then exit; fi; \
     && apt-get update \
     && apt-get install -q=2 -y tuxpkg \
     && apt-get build-dep -qy /tuxpkg \
+    && rm -rf /tmp/*
 
 # vim: ft=dockerfile
