gitlab-ci-pipeline.yml: allow skipping RPM and DEB packages

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -61,6 +61,8 @@ check-repository-key:
     - ${TUXPKG} check-repository-key
 
 rpm:
+  rules:
+    - if: $SKIP_BUILD_RPM != "1"
   stage: build
   image: $CI_REGISTRY_IMAGE:ci-fedora
   variables:
@@ -76,6 +78,8 @@ rpm:
       - dist/*.rpm
 
 rpm-sanity-check:
+  rules:
+    - if: $SKIP_BUILD_RPM != "1"
   stage: test
   image: fedora
   needs:
@@ -87,6 +91,8 @@ rpm-sanity-check:
     - if command -v ${TUXPKG_PROJECT}; then ${TUXPKG_PROJECT} --help; fi
 
 deb:
+  rules:
+    - if: $SKIP_BUILD_DEB != "1"
   image: $CI_REGISTRY_IMAGE:ci-debian
   stage: build
   variables:
@@ -102,6 +108,8 @@ deb:
       - dist/*.deb
 
 deb-sanity-check:
+  rules:
+    - if: $SKIP_BUILD_DEB != "1"
   stage: test
   image: debian
   needs:
@@ -115,9 +123,9 @@ deb-sanity-check:
 
 
 repository:
+  rules:
+    - if: $SKIP_BUILD_RPM != "1" && $SKIP_BUILD_DEB != "1" && $CI_COMMIT_TAG != null
   image: $CI_REGISTRY_IMAGE:ci-debian
-  only:
-    - tags
   needs:
     - deb
     - rpm
