gitlab-ci-pipeline.yml: fix usage of rules/only
Signed-off-by: Antonio Terceiro <antonio.terceiro@linaro.org>

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -143,10 +143,8 @@ repository:
 
 pypi:
   rules:
-    - if: $FLIT_USERNAME != null && $FLIT_PASSWORD != null
+    - if: $CI_COMMIT_TAG && $FLIT_USERNAME != null && $FLIT_PASSWORD != null
   image: $CI_REGISTRY_IMAGE:ci-debian
-  only:
-    - tags
   stage: deploy
   needs:
     - test
