gitlab-ci-pipeline: ensure test job always runs in all pipeline types
Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/gitlab-ci-pipeline.yml
+++ b/gitlab-ci-pipeline.yml
@@ -3,6 +3,8 @@ variables:
   PYTEST_ARGS: ""
 
 test:
+  rules:
+    - when: always
   image: $CI_REGISTRY_IMAGE:ci-debian
   stage: test
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
