init: add --platform option for GitHub/GitLab selection
Add a --platform option to the init command that allows selecting
the target CI/CD platform:

- auto: Detect from git remote origin URL (default)
- github: Generate GitHub Actions workflow
- gitlab: Generate GitLab CI configuration

The init command now skips platform-specific files based on the
selected platform:
- For GitHub: skips .gitlab-ci.yml
- For GitLab: skips .github/ directory

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,9 @@ requires = [
 
 [tool.flit.scripts]
 tuxpkg = "tuxpkg.__main__:main"
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+]
